--- a/cms/templates/unit.html
+++ b/cms/templates/unit.html
@@ -64,15 +64,14 @@
         <span class="close-icon"></span>
       </a>
 
-      <div class="upload-form">
+      <div class="upload-form upload-modal">
         <h1>Upload New File</h1>
         <p class="file-name"></p>
         <div class="progress-bar">
           <div class="progress-fill"></div>
         </div>
         <div class="embeddable">
-          <label>Embeddable XML:</label>
-          <input type="text" class="embeddable-xml-input" value="&lt;img src=&quot;&quot;/&gt;">
+          <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert File</a>
         </div>
         <form class="file-chooser" action="/Giannattasio/313/course/Photoshop_for_Monkeys/upload_asset" method="post" enctype="multipart/form-data">
           <a href="#" class="choose-file-button">Choose File</a>
@@ -80,192 +79,194 @@
         </form>
       </div>
 
-      <header>
-        <a href="#" class="upload-button">Upload New File</a>
-        <input type="text" class="search">
-      </header>
-      <table class="library-list">
-        <thead>
-          <tr>
-            <th class="thumb-col"></th>
-            <th class="name-col"><a href="#">Name <span class="sort-icon down"></span></a></th>
-            <th class="date-col"><a href="#">Date Added</a></th>
-            <th class="insert-col"></th>
-          </tr>
-        </thead>
-        <tbody id="asset_table_body">
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-          <tr data-id="id">
-            <td class="thumb-col">
-              <div class="thumb">
-                <img src="/">
-              </div>
-            </td>
-            <td class="name-col">
-              <a href="#" class="filename">ut-logo-350-150.png</a>
-              <div class="embeddable-xml"></div>
-            </td>
-            <td class="date-col">
-              30 October, 2012 at 07:17 PM
-            </td>
-            <td class="insert-col">
-              <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="library">
+        <header>
+          <a href="#" class="upload-button">Upload New File</a>
+          <input type="text" class="search" placeholder="search assets">
+        </header>
+        <table>
+          <thead>
+            <tr>
+              <th class="thumb-col"></th>
+              <th class="name-col"><a href="#">Name <span class="sort-icon down"></span></a></th>
+              <th class="date-col"><a href="#">Date Added</a></th>
+              <th class="insert-col"></th>
+            </tr>
+          </thead>
+          <tbody id="asset_table_body">
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+            <tr data-id="id">
+              <td class="thumb-col">
+                <div class="thumb">
+                  <img src="/">
+                </div>
+              </td>
+              <td class="name-col">
+                <a href="#" class="filename">ut-logo-350-150.png</a>
+                <div class="embeddable-xml"></div>
+              </td>
+              <td class="date-col">
+                30 October, 2012 at 07:17 PM
+              </td>
+              <td class="insert-col">
+                <a href="#" class="insert-asset-button" data-markup="<img src='/c4x/Giannattasio/313/asset/ut-logo-350-150.png'/>">Insert</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
       <nav class="pagination wip-box">
         Page: 
         <ol class="pages">
