--- a/cms/static/sass/_unit.scss
+++ b/cms/static/sass/_unit.scss
@@ -40,14 +40,14 @@
     }
   }
 
-  h2 {
-    margin: 30px 0;
-    color: #646464;
-    font-size: 19px;
-    font-weight: 300;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-  }
+  // h2 {
+  //   margin: 30px 0;
+  //   color: #646464;
+  //   font-size: 19px;
+  //   font-weight: 300;
+  //   letter-spacing: 1px;
+  //   text-transform: uppercase;
+  // }
 
   .components {
     > li {
