fix: auto enroll users when added as staff
The course team management section under Instructor > Membership tab
allows users to be added a role even if are not enrolled in the course.
This is behaviour does not match the help text displayed in the section.

This PR updates modify_access api to enrolls user if they are not enrolled
after adding them to a role as well as changes the help text to reflect
actual changes.

--- a/lms/templates/instructor/instructor_dashboard_2/membership.html
+++ b/lms/templates/instructor/instructor_dashboard_2/membership.html
@@ -172,7 +172,8 @@ from openedx.core.djangolib.markup import HTML, Text
         ${_("Course team members with the Staff role help you manage your course. "
         "Staff can enroll and unenroll learners, as well as modify their grades and "
         "access all course data. Staff also have access to your course in Studio and "
-        "Insights. You can only give course team roles to enrolled users.")}"
+        "Insights. Any users not yet enrolled in the course will be automatically "
+        "enrolled when added as Staff.")}"
       data-list-endpoint="${ section_data['list_course_role_members_url'] }"
       data-modify-endpoint="${ section_data['modify_access_url'] }"
       data-add-button-label="${_("Add Staff")}"
@@ -185,7 +186,8 @@ from openedx.core.djangolib.markup import HTML, Text
         ${_("Course team members with the Limited Staff role help you manage your course. "
         "Limited Staff can enroll and unenroll learners, as well as modify their grades and "
         "access all course data. Limited Staff don't have access to your course in Studio. "
-        "You can only give course team roles to enrolled users.")}"
+        "Any users not yet enrolled in the course will be automatically enrolled when added "
+        "as Limited Staff.")}"
       data-list-endpoint="${ section_data['list_course_role_members_url'] }"
       data-modify-endpoint="${ section_data['modify_access_url'] }"
       data-add-button-label="${_("Add Limited Staff")}"
@@ -199,8 +201,8 @@ from openedx.core.djangolib.markup import HTML, Text
         ${_("Course team members with the Admin role help you manage your course. "
           "They can do all of the tasks that Staff can do, and can also add and "
           "remove the Staff and Admin roles, discussion moderation roles, and the "
-          "beta tester role to manage course team membership. You can only give "
-          "course team roles to enrolled users.")}"
+          "beta tester role to manage course team membership. Any users not yet "
+          "enrolled in the course will be automatically enrolled when added as Admin.")}"
       data-list-endpoint="${ section_data['list_course_role_members_url'] }"
       data-modify-endpoint="${ section_data['modify_access_url'] }"
       data-add-button-label="${_("Add Admin")}"
@@ -213,7 +215,8 @@ from openedx.core.djangolib.markup import HTML, Text
       data-info-text="
         ${_("Beta Testers can see course content before other learners. "
         "They can make sure that the content works, but have no additional "
-        "privileges. You can only give course team roles to enrolled users.")}"
+        "privileges. Any users not yet enrolled in the course will be automatically "
+        "enrolled when added as Beta Tester.")}"
       data-list-endpoint="${ section_data['list_course_role_members_url'] }"
       data-modify-endpoint="${ section_data['modify_access_url'] }"
       data-add-button-label="${_("Add Beta Tester")}"
@@ -237,7 +240,8 @@ from openedx.core.djangolib.markup import HTML, Text
       data-rolename="data_researcher"
       data-display-name="${_("Course Data Researcher")}"
       data-info-text="
-        ${_("Course Data Researchers can access the data download tab.")}"
+        ${_("Course Data Researchers can access the data download tab. Any users not yet "
+          "enrolled in the course will be automatically enrolled when added as Course Data Researcher.")}"
       data-list-endpoint="${ section_data['list_course_role_members_url'] }"
       data-modify-endpoint="${ section_data['modify_access_url'] }"
       data-add-button-label="${_("Add Course Data Researcher")}"
