--- a/lms/templates/problem.html
+++ b/lms/templates/problem.html
@@ -1,7 +1,7 @@
 <%page expression_filter="h"/>
 <%!
 from django.utils.translation import ngettext, gettext as _
-from openedx.core.djangolib.markup import HTML
+from openedx.core.djangolib.markup import HTML, Text
 %>
 
 <%namespace name='static' file='static_content.html'/>
@@ -89,6 +89,9 @@ from openedx.core.djangolib.markup import HTML
         ## When attempts are not 0, the CTA above will contain a message about the number of used attempts
         % if attempts_allowed and (not submit_disabled_cta or attempts_used == 0):
           ${ngettext("You have used {num_used} of {num_total} attempt", "You have used {num_used} of {num_total} attempts", attempts_allowed).format(num_used=attempts_used, num_total=attempts_allowed)}
+        % endif
+        % if grading_method:
+          <div>${Text(_("Grading method: {grading_method}")).format(grading_method=grading_method)}</div>
         % endif
         <span class="sr">${_("Some problems have options such as save, reset, hints, or show answer. These options follow the Submit button.")}</span>
       </div>
