--- a/cms/static/sass/views/_container.scss
+++ b/cms/static/sass/views/_container.scss
@@ -155,6 +155,15 @@
         }
       }
 
+      // CASE: is hidden from TOC
+      &.is-hidden-from-toc{
+        @extend %bar-module-black;
+
+        &.is-scheduled .wrapper-release .copy {
+          text-decoration: line-through;
+        }
+      }
+
       // CASE: content is gated
       &.is-gated {
         @extend %bar-module-black;
