feat: show message in subsection visibility tab when hft is enabled
Shows a message in the visibility tab of the subsections when the Hide From TOC is enabled.

Ref: https://openedx.atlassian.net/wiki/spaces/OEPM/pages/3853975595/Feature+Enhancement+Proposal+Hide+Sections+from+course+outline

--- a/cms/static/sass/elements/_modal-window.scss
+++ b/cms/static/sass/elements/_modal-window.scss
@@ -202,6 +202,33 @@
         min-height: 95px;
       }
 
+      .enable-hide-from-toc-container {
+        background: #E5F1F8;
+        padding: 20px 32px;
+        margin: 16px 0px;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .icon-message {
+          color: white;
+          background: #0075B4;
+          padding: 8px;
+          border-radius: 50%;
+          transform: rotate(90deg);
+          font-size: 16px;
+          height: 18px;
+          width: 20px;
+        }
+
+        .text-message {
+          padding: 0px 10px;
+          word-wrap: break-word;
+          font-weight: 500;
+        }
+      }
+
       .list-fields,
       .list-actions {
         display: inline-block;
