--- a/cms/templates/plugin.html
+++ b/cms/templates/plugin.html
@@ -1,31 +1,79 @@
 <%page expression_filter="h"/>
-<%inherit file="base.html" />
-<%def name="online_help_token()">
-<%
-if is_unit_page:
-    return "unit"
-else:
-    return "container"
-%>
-</%def>
 <%!
 from django.urls import reverse
 from django.utils.translation import gettext as _
 
-from cms.djangoapps.contentstore.helpers import xblock_studio_url, xblock_type_display_name
+from cms.djangoapps.contentstore.helpers import xblock_type_display_name
 from openedx.core.djangolib.js_utils import (
     dump_js_escaped_json, js_escaped_string
 )
 from openedx.core.djangolib.markup import HTML, Text
+from openedx.core.release import RELEASE_LINE
+
+from cms.djangoapps.contentstore.config.waffle import CUSTOM_RELATIVE_DATES
+from lms.djangoapps.branding import api as branding_api
+from openedx.core.djangoapps.util.user_messages import PageLevelMessages
 %>
 
-<%block name="title">${xblock.display_name_with_default} ${xblock_type_display_name(xblock)}</%block>
-<%block name="bodyclass">is-signedin course container view-container</%block>
-
 <%namespace name='static' file='static_content.html'/>
+<%! main_css = "style-main-v1" %>
+<!doctype html>
+<!--[if lte IE 9]><html class="ie9 lte9" lang="${LANGUAGE_CODE}"><![endif]-->
+<!--[if !IE]><<!--><html lang="${LANGUAGE_CODE}"><!--<![endif]-->
+  <head dir="${static.dir_rtl()}">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="openedx-release-line" content="${RELEASE_LINE}" />
+    <title>
+        ${xblock.display_name_with_default} ${xblock_type_display_name(xblock)} |
+        % if context_course:
+        <% ctx_loc = context_course.location %>
+        ${context_course.display_name_with_default} |
+        % elif context_library:
+        ${context_library.display_name_with_default} |
+        % endif
+        ${settings.STUDIO_NAME}
+    </title>
 
-<%block name="header_extras">
-% for template_name in templates:
+    <%
+      jsi18n_path = "js/i18n/{language}/djangojs.js".format(language=LANGUAGE_CODE)
+    %>
+
+    % if getattr(settings, 'CAPTURE_CONSOLE_LOG', False):
+        <script type="text/javascript">
+            var oldOnError = window.onerror;
+            window.localStorage.setItem('console_log_capture', JSON.stringify([]));
+
+            window.onerror = function (message, url, lineno, colno, error) {
+                if (oldOnError) {
+                    oldOnError.apply(this, arguments);
+                }
+
+                var messages = JSON.parse(window.localStorage.getItem('console_log_capture'));
+                messages.push([message, url, lineno, colno, (error || {}).stack]);
+                window.localStorage.setItem('console_log_capture', JSON.stringify(messages));
+            }
+        </script>
+    % endif
+
+    <script type="text/javascript" src="${static.url(jsi18n_path)}"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <meta name="path_prefix" content="${EDX_ROOT_URL}">
+    <% favicon_url = branding_api.get_favicon_url() %>
+    <link rel="icon" type="image/x-icon" href="${favicon_url}"/>
+    <%static:css group='style-vendor'/>
+    <%static:css group='style-vendor-tinymce-content'/>
+    <%static:css group='style-vendor-tinymce-skin'/>
+
+    % if uses_bootstrap:
+      <link rel="stylesheet" href="${static.url(self.attr.main_css)}" type="text/css" media="all" />
+    % else:
+      <%static:css group='${self.attr.main_css}'/>
+    % endif
+
+    <%include file="widgets/segment-io.html" />
+
+    % for template_name in templates:
 <script type="text/template" id="${template_name}-tpl">
     <%static:include path="js/${template_name}.underscore" />
 </script>
@@ -38,9 +86,95 @@ from openedx.core.djangolib.markup import HTML, Text
     <link rel="stylesheet" type="text/css" href="${static.url('common/css/vendor/common.min.css')}" />
     <link rel="stylesheet" type="text/css" href="${static.url('common/css/vendor/editImageModal.min.css')}" />
 % endif
-</%block>
+    <!-- Hotjar Tracking Code for studio -->
+    <script>
+      (function(h,o,t,j,a,r){
+          h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+          h._hjSettings={hjid: Number("${settings.HOTJAR_ID |n, js_escaped_string}"),hjsv:6};
+          a=o.getElementsByTagName('head')[0];
+          r=o.createElement('script');r.async=1;
+          r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+          a.appendChild(r);
+      })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
+    </script>
+  </head>
 
-<%block name="page_bundle">
+  <body class="${static.dir_rtl()} <%block name='bodyclass'></%block> lang_${LANGUAGE_CODE}">
+
+    <a class="nav-skip" href="#main">${_("Skip to main content")}</a>
+
+    <%static:js group='base_vendor'/>
+
+    <%static:webpack entry="commons"/>
+
+    <script type="text/javascript">
+      window.baseUrl = "${settings.STATIC_URL | n, js_escaped_string}";
+      require.config({
+          baseUrl: window.baseUrl
+      });
+    </script>
+
+    <script type="text/javascript" src="${static.url("cms/js/require-config.js")}"></script>
+    <script type="text/javascript">
+        window.STUDIO_FRONTEND_IN_CONTEXT_IMAGE_SELECTION = true;
+    </script>
+    
+   
+    <!-- view -->
+     <!-- view -->
+     <div class="wrapper wrapper-view" dir="${static.dir_rtl()}">
+  
+  
+        <main id="main" aria-label="Content" tabindex="-1">
+          <div id="content">
+            <div class="wrapper-content wrapper">
+                <div class="inner-wrapper">
+                    <section class="content-area">
+            
+                        <article class="content-primary">
+                            <div class="container-message wrapper-message"></div>
+                            <%
+                                assets_url = reverse('assets_handler', kwargs={'course_key_string': str(xblock_locator.course_key)})
+                            %>
+                            <section class="wrapper-xblock level-page is-hidden studio-xblock-wrapper" data-locator="${xblock_locator}" data-course-key="${xblock_locator.course_key}" data-course-assets="${assets_url}">
+                            </section>
+                            % for html_content in html_contents:
+                                ${Text(HTML(html_content))}
+                            % endfor
+                            <div class="ui-loading">
+                                <p><span class="spin"><span class="icon fa fa-refresh" aria-hidden="true"></span></span> <span class="copy">${_("Loading")}</span></p>
+                            </div>
+                        </article>
+                        
+                    </section>
+                </div>
+            
+               </div>
+          </div>
+        </main>
+      </div>
+
+    % if context_course:
+      <%static:webpack entry="js/factories/context_course"/>
+      <script type="text/javascript">
+        window.course = new ContextCourse({
+          id: "${context_course.id | n, js_escaped_string}",
+          name: "${context_course.display_name_with_default | n, js_escaped_string}",
+          url_name: "${context_course.location.block_id | n, js_escaped_string}",
+          org: "${context_course.location.org | n, js_escaped_string}",
+          num: "${context_course.location.course | n, js_escaped_string}",
+          display_course_number: "${context_course.display_coursenumber | n, js_escaped_string}",
+          revision: "${context_course.location.branch | n, js_escaped_string}",
+          self_paced: ${ context_course.self_paced | n, dump_js_escaped_json },
+          is_custom_relative_dates_active: ${CUSTOM_RELATIVE_DATES.is_enabled(context_course.id) | n, dump_js_escaped_json},
+          start: ${context_course.start | n, dump_js_escaped_json},
+          discussions_settings: ${context_course.discussions_settings | n, dump_js_escaped_json}
+        });
+      </script>
+    % endif
+    % if user.is_authenticated:
+      <%static:webpack entry='js/sock'/>
+    % endif
     <%static:webpack entry="js/factories/container">
         ContainerFactory(
             ${component_templates | n, dump_js_escaped_json},
@@ -51,46 +185,10 @@ from openedx.core.djangolib.markup import HTML, Text
                 canEdit: true,
                 outlineURL: "${outline_url | n, js_escaped_string}",
                 clipboardData: ${user_clipboard | n, dump_js_escaped_json},
+                asidesOnly: true
             }
         );
         
     </%static:webpack>
-</%block>
-
-<%block name="content">
-
-<script type="text/javascript">
-    window.STUDIO_FRONTEND_IN_CONTEXT_IMAGE_SELECTION = true;
-</script>
-
-<div class="wrapper-content wrapper">
-    <div class="inner-wrapper">
-        <section class="content-area">
-
-            <article class="content-primary">
-                <div class="container-message wrapper-message"></div>
-                <%
-                    assets_url = reverse('assets_handler', kwargs={'course_key_string': str(xblock_locator.course_key)})
-                %>
-                <section class="wrapper-xblock level-page is-hidden studio-xblock-wrapper" data-locator="${xblock_locator}" data-course-key="${xblock_locator.course_key}" data-course-assets="${assets_url}">
-                </section>
-                <div class="xblock-studio_view xblock-studio_view-rapid_response_xblock xblock_asides-v1 wrapper-comp-plugins" data-init="RapidResponseAsideStudioInit" data-runtime-class="StudioRuntime" data-runtime-version="1" data-block-type="rapid_response_xblock" data-usage-id="aside-usage-v2:block-v1$:MIT-Arbisoft+CS101+2023-R1+type@problem+block@9ae8a4a60fdc4d05940e3caf297d44e0::rapid_response_xblock" data-request-token="1df72f76a3d911ee936b0242ac12000d">  
-                    <div class="rapid-response-block" data-enabled="True"> 
-                    <div class="rapid-response-content"></div>  
-                    <script type="text/template" id="rapid-response-toggle-tmpl">
-                        <label>
-                          <input type="checkbox" class="rapid-enabled-toggle"/>
-                          Enable problem for rapid-response
-                        </label>
-                      </script>
-                            </div>	</div>
-                <div class="ui-loading">
-                    <p><span class="spin"><span class="icon fa fa-refresh" aria-hidden="true"></span></span> <span class="copy">${_("Loading")}</span></p>
-                </div>
-            </article>
-            
-        </section>
-    </div>
-
-   </div>
-</%block>
+  </body>
+</html>
