feat: add share link modal when hide from toc is enabled
Adds a new button in the child subsections of sections with Hide From TOC enabled.
This button displays a new modal with two tabs. The first tab displays a button
that allows you to copy the link of that subsection to the clipboard. The second
tab displays a button that allows you to copy the embedded link of the same
subsection to the clipboard.

Ref: https://openedx.atlassian.net/wiki/spaces/OEPM/pages/3853975595/Feature+Enhancement+Proposal+Hide+Sections+from+course+outline

--- a/cms/static/sass/elements/_modules.scss
+++ b/cms/static/sass/elements/_modules.scss
@@ -666,6 +666,29 @@ $outline-indent-width: $baseline;
       .icon {
         @include margin-right($baseline/4);
       }
+
+      .status-message {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        @media (max-width: 768px) {
+          flex-direction: column;
+        }
+      }
+
+      .subsection-share-link-button {
+        border-radius: ($baseline/4);
+        font-size: 1.2rem;
+        font-weight: 600;
+        padding: 0.5rem 1rem;
+        margin: 0 1rem;
+
+        .icon-share-link {
+          color: $white !important;
+          transform: rotate(90deg);
+        }
+      }
     }
 
     .status-message-copy {
