--- a/cms/static/sass/elements/_modal-window.scss
+++ b/cms/static/sass/elements/_modal-window.scss
@@ -143,6 +143,40 @@
           }
         }
       }
+
+      .subsection-share-link-tabs-header {
+        margin-bottom: $baseline;
+        border-bottom: 1px solid $gray-l3;
+
+        li.subsection-share-link-tab-buttons {
+          display: inline-block;
+          margin-right: $baseline;
+
+          .subsection-share-link-tab-button {
+            @extend %t-copy-sub1;
+            @extend %t-regular;
+
+            background-image: none;
+            background-color: $white;
+            color: $gray-d1;
+            border-radius: 0;
+            box-shadow: none;
+            border: 0;
+            padding: ($baseline/4) ($baseline/2);
+            text-transform: uppercase;
+
+            &:hover {
+              background-color: theme-color("inverse");
+              color: theme-color("primary");
+            }
+
+            &.active {
+              border-bottom: 4px solid theme-color("primary");
+              color: theme-color("primary");
+            }
+          }
+        }
+      }
     }
 
     .modal-section-title {
@@ -181,6 +215,28 @@
 
         .action-button {
           @extend %t-icon4;
+        }
+      }
+
+      .subsection-share-link-container {
+        display: flex;
+        align-items: center;
+
+        .copy-link-button {
+          border-radius: ($baseline/4);
+          font-size: 1.5rem;
+          font-weight: 600;
+          padding: 0.7rem 1rem;
+
+          .icon-copy-clipboard {
+            color: $white;
+          }
+        }
+
+        .share-link-animated-svg {
+          border-radius: 0.5rem;
+          margin-left: 1rem;
+          box-shadow: 0 0 7px $shadow-d1;
         }
       }
     }
