refactor: change survey report message location (#34126)
* refactor: change survey report message location

--- a/lms/templates/admin/base_site.html
+++ b/lms/templates/admin/base_site.html
@@ -21,6 +21,6 @@
 
 {% endblock %}
 
-{% block header %}{{ block.super }}
+{% block messages %}{{ block.super }}
     {% include "survey_report/admin_banner.html" %}
 {% endblock %}
