--- a/lms/templates/financial-assistance/apply.html
+++ b/lms/templates/financial-assistance/apply.html
@@ -17,7 +17,8 @@ FinancialAssistanceFactory({
     dashboard_url: '${dashboard_url | n, js_escaped_string}',
     account_settings_url: '${account_settings_url | n, js_escaped_string}',
     platform_name: '${platform_name | n, js_escaped_string}',
-    submit_url: '${submit_url | n, js_escaped_string}'
+    submit_url: '${submit_url | n, js_escaped_string}',
+    auto_generated_username_enabled: ${auto_generated_username_enabled| n, dump_js_escaped_json},
 });
 </%static:require_module>
 </%block>
