fix: Error message does not show  when  user clicks Dismiss button (#34277)

--- a/cms/templates/course_outline.html
+++ b/cms/templates/course_outline.html
@@ -90,7 +90,7 @@ from django.urls import reverse
 
       <ul class="nav-actions">
         <li class="action action-dismiss">
-          <a href="#" class="button dismiss-button" style="color:black; border-color:black">
+          <a href="#" class="button dismiss-button-announcement" style="color:black; border-color:black">
             <span class="icon fa fa-times-circle" aria-hidden="true"></span>
             <span class="button-copy">${_("Dismiss")}</span>
           </a>
