--- a/lms/static/sass/lms-course.scss
+++ b/lms/static/sass/lms-course.scss
@@ -25,6 +25,12 @@
     }
 }
 
-.percentage {
-    white-space: nowrap;
+@media only screen and (max-width: 767px) {
+    .survey-table .survey-option .visible-mobile-only {
+        width: calc(100% - 21px) !important;
+    }
+
+    .survey-percentage .percentage {
+        width: 54px !important;
+    }
 }
