--- a/cms/templates/index.html
+++ b/cms/templates/index.html
@@ -132,7 +132,7 @@ from openedx.core.djangolib.js_utils import (
                     'screen_name': 'studio_home',
                     'organization': '${platform_name}',
                   }
-              ); sendTracking({'has_created_course':'true'}); CourseLimitRedirect();"
+              ); sendTracking({'has_created_course':'true'}); CourseLimitRedirect(); clarity('set', 'has_created_course', 'true');"
             />
             <input type="button" value="${_('Cancel')}" class="action action-secondary action-cancel new-course-cancel" />
           </div>
@@ -611,6 +611,13 @@ from openedx.core.djangolib.js_utils import (
 </div>
 
 <script>
+
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script","${settings.CLARITY_PROJECT_ID}");
+
     function sendTracking(data) {
         const url = "${tracking_api_url}";
         requestData = { event_data: data }
