--- a/lms/static/certificates/sass/_components.scss
+++ b/lms/static/certificates/sass/_components.scss
@@ -499,6 +499,7 @@
     }
 
     // hide the fancy
+    .accomplishment-signatories .signatory-signature,
     .accomplishment-type-symbol {
       display: none;
     }
