--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_header.html
@@ -45,18 +45,19 @@
                                     >
                                         <table
                                             width="100%"
-                                            style="
-                                            background: #1b3b40; color: white; border-radius: 8px;
-                                            padding: 1.25rem 1rem; margin-right: {% if forloop.first %} 1.25rem {% else %} 0 {% endif %}"
+                                            cellpadding="0"
+                                            cellspacing="0"
+                                            style="background: #1b3b40; color: white; border-radius: 8px;
+                                            padding: 1.25rem 1rem;"
                                         >
                                             <tbody>
                                                 <tr align="center">
-                                                    <td style="font-weight: 700; font-size: 2rem; line-height: 44px">
+                                                    <td style="font-weight: 700; font-size: 32px; line-height: 44px; padding: 0">
                                                         {{update.count}}
                                                     </td>
                                                 </tr>
                                                 <tr align="center">
-                                                    <td style="font-weight: 600; font-size: 0.875rem; line-height: 20px">
+                                                    <td style="font-weight: 600; font-size: 0.875rem; line-height: 20px; padding: 0">
                                                         {{update.type}}
                                                     </td>
                                                 </tr>
