--- a/openedx/core/djangoapps/notifications/templates/notifications/digest_content.html
+++ b/openedx/core/djangoapps/notifications/templates/notifications/digest_content.html
@@ -18,7 +18,7 @@
     {% endif %}
     <p style="height: 1rem; margin: 0;" />
     <p style="margin: 0;">
-        <table style="background-color:#FBFAF9;" width="100%">
+        <table style="background-color: #FBFAF9; border-radius: 8px; padding: 0.5rem 0" width="100%">
             <tbody>
                 {% for content in update.content %}
                     <tr>
@@ -28,11 +28,12 @@
                                 style="max-height: 28px; max-width: 28px; margin: 0.75rem 1rem 0.75rem 0"
                             />
                         </td>
-                        <td width="100%" align="left" valign="top" style=" padding: 1rem 1rem 1rem 0">
+                        <td width="100%" align="left" valign="top" style=" padding: 1rem 1rem 1rem 0.5rem">
                             <p style="font-size: 0.875rem; font-weight:400; line-height:24px; color:#454545; margin: 0;">
                                 {{ content.title }}
                             </p>
-                            <p style="color:#707070; margin-top: 0.5rem">
+                            <p style="height: 0.5rem; margin: 0"></p>
+                            <p style="color:#707070; margin: 0">
                                 <span style="float: left">
                                     <span>{{ content.course_name }}</span>
                                     <span style="padding: 0 0.375rem">&middot</span>
