feat: fix missing `gettext` functions if translations aren't pulled
in devstack

--- a/cms/templates/base.html
+++ b/cms/templates/base.html
@@ -60,7 +60,12 @@ from openedx.core.release import RELEASE_LINE
         </script>
     % endif
 
-    <script type="text/javascript" src="${static.url(jsi18n_path)}"></script>
+    % if LANGUAGE_CODE != 'en':
+      <script type="text/javascript" src="${static.url(jsi18n_path)}"></script>
+    % elif settings.DEBUG or LANGUAGE_CODE == 'en':
+      ## Provides a fallback for gettext functions for English and in debug mode
+      <script type="text/javascript" src="${static.url('js/src/gettext_fallback.js')}"></script>
+    % endif
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="path_prefix" content="${EDX_ROOT_URL}">
     <%block name="header_meta"></%block>
