fix: fixup previous commit

--- a/cms/templates/base.html
+++ b/cms/templates/base.html
@@ -60,10 +60,9 @@ from openedx.core.release import RELEASE_LINE
         </script>
     % endif
 
-    % if LANGUAGE_CODE != 'en':
-      <script type="text/javascript" src="${static.url(jsi18n_path)}"></script>
-    % elif settings.DEBUG or LANGUAGE_CODE == 'en':
-      ## Provides a fallback for gettext functions for English and in debug mode
+    <script type="text/javascript" src="${static.url(jsi18n_path)}"></script>
+    % if settings.DEBUG:
+      ## Provides a fallback for gettext functions in development environment
       <script type="text/javascript" src="${static.url('js/src/gettext_fallback.js')}"></script>
     % endif
     <meta name="viewport" content="width=device-width,initial-scale=1">
