fix: add fallback `gettext` function if translations aren't pulled in dev envs (#34416)

--- a/cms/templates/base.html
+++ b/cms/templates/base.html
@@ -61,6 +61,10 @@ from openedx.core.release import RELEASE_LINE
     % endif
 
     <script type="text/javascript" src="${static.url(jsi18n_path)}"></script>
+    % if settings.DEBUG:
+      ## Provides a fallback for gettext functions in development environment
+      <script type="text/javascript" src="${static.url('js/src/gettext_fallback.js')}"></script>
+    % endif
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="path_prefix" content="${EDX_ROOT_URL}">
     <%block name="header_meta"></%block>
