Revert "fix: remove username from financial form (#34233)"
This reverts commit 7450f32ea15b5750f183881b7bfb04dcc852f46b.

--- a/lms/templates/financial-assistance/apply.html
+++ b/lms/templates/financial-assistance/apply.html
@@ -17,8 +17,7 @@ FinancialAssistanceFactory({
     dashboard_url: '${dashboard_url | n, js_escaped_string}',
     account_settings_url: '${account_settings_url | n, js_escaped_string}',
     platform_name: '${platform_name | n, js_escaped_string}',
-    submit_url: '${submit_url | n, js_escaped_string}',
-    auto_generated_username_enabled: ${auto_generated_username_enabled| n, dump_js_escaped_json},
+    submit_url: '${submit_url | n, js_escaped_string}'
 });
 </%static:require_module>
 </%block>
