--- a/lms/templates/support/edx_ace/wholecoursereset/email/body.html
+++ b/lms/templates/support/edx_ace/wholecoursereset/email/body.html
@@ -7,7 +7,7 @@
   <tr>
     <td>
       <h1>
-        {% trans "The course {{ course_title }} has been reset !" as tmsg %}{{ tmsg | force_escape }}
+        {% blocktrans %}The course {{ course_title }} has been reset !{% endblocktrans %}
       </h1>
       <p style="color: rgba(0,0,0,.75);">
         {% filter force_escape %}
