feat: added edit modal template

--- a/cms/static/sass/course-unit-mfe-iframe-bundle.scss
+++ b/cms/static/sass/course-unit-mfe-iframe-bundle.scss
@@ -171,6 +171,10 @@ body {
     }
   }
 
+  .edit-xblock-modal select {
+    background-color: $white;
+  }
+
   &.wrapper-modal-window .modal-window .modal-actions a {
     color: $text-color;
     background-color: $transparent;
