fix: enroll users when added to a forum role

--- a/lms/templates/instructor/instructor_dashboard_2/membership.html
+++ b/lms/templates/instructor/instructor_dashboard_2/membership.html
@@ -229,8 +229,9 @@ from openedx.core.djangolib.markup import HTML, Text
         ${_("Discussion Admins can edit or delete any post, clear misuse flags, close "
          "and re-open threads, endorse responses, and see posts from all groups. "
          "Their posts are marked as 'staff'. They can also add and remove the "
-         "discussion moderation roles to manage course team membership. Only "
-         "enrolled users can be added as Discussion Admins.")}"
+         "discussion moderation roles to manage course team membership. Any users "
+         "not yet enrolled in the course will be automatically enrolled when added as "
+         "Discussion Admin")}"
       data-list-endpoint="${ section_data['list_forum_members_url'] }"
       data-modify-endpoint="${ section_data['update_forum_role_membership_url'] }"
       data-add-button-label="${_("Add Discussion Admin")}"
@@ -257,8 +258,8 @@ from openedx.core.djangolib.markup import HTML, Text
         ${_("Discussion Moderators can edit or delete any post, clear misuse flags, close "
          "and re-open threads, endorse responses, and see posts from all groups. "
          "Their posts are marked as 'staff'. They cannot manage course team membership by "
-         "adding or removing discussion moderation roles. Only enrolled users can be "
-         "added as Discussion Moderators.")}"
+         "adding or removing discussion moderation roles. Any users not yet enrolled "
+         "in the course will be automatically enrolled when added as Discussion Moderator")}"
       data-list-endpoint="${ section_data['list_forum_members_url'] }"
       data-modify-endpoint="${ section_data['update_forum_role_membership_url'] }"
       data-add-button-label="${_("Add Moderator")}"
@@ -271,8 +272,8 @@ from openedx.core.djangolib.markup import HTML, Text
         ${_("Group Community TAs are members of the community who help course teams moderate discussions. Group "
             "Community TAs see only posts by learners in their assigned group. They can edit or delete posts, "
             "clear flags, close and re-open threads, and endorse responses, but only for posts by learners in "
-            "their group. Their posts are marked as 'Community TA'. Only enrolled learners can be added as Group "
-            "Community TAs.")}"
+            "their group. Their posts are marked as 'Community TA'. Any users not yet enrolled "
+            "in the course will be automatically enrolled when added as Group Community TA")}"
       data-list-endpoint="${ section_data['list_forum_members_url'] }"
       data-modify-endpoint="${ section_data['update_forum_role_membership_url'] }"
       data-add-button-label="${_("Add Group Community TA")}"
@@ -285,7 +286,7 @@ from openedx.core.djangolib.markup import HTML, Text
         ${_("Community TAs are members of the community who help course teams moderate discussions. "
         "They can see posts by learners in their assigned cohort or enrollment track, and can edit or delete posts, "
         "clear flags, close or re-open threads, and endorse responses. Their posts are marked as 'Community TA'. "
-        "Only enrolled learners can be added as Community TAs.")}"
+        "Any users not yet enrolled in the course will be automatically enrolled when added as Community TA")}"
       data-list-endpoint="${ section_data['list_forum_members_url'] }"
       data-modify-endpoint="${ section_data['update_forum_role_membership_url'] }"
       data-add-button-label="${_("Add Community TA")}"
